# split-sheet

./: README.md  pyproject.toml
split-sheet/split_sheet/: main.py
split_sheet/: __init__.py  split_sheet.py
